# hana-gtk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: com.zackmichener.hana.desktop
src/: hana.vala  notify-app.vala
